# ContexGo

./: .gitignore  L1设计文档.md  README.md  main.py  pyproject.toml  test_sensor_cli.md  test_sensor_cli.py
chronicle/: BaseL1Sensor.py  base.py  base_l1_sensor.py
chronicle/assembly/: __init__.py  event_gate.py
chronicle/sensors/: window_focus.py
contexgo/: main.py  run_ui.bat - 快捷方式.lnk
contexgo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contexgo/chronicle/: base.py  base_l1_sensor.py
contexgo/chronicle/assembly/: chronicle_gate.py  event_gate.py  sensor_manager.py
contexgo/chronicle/graphql/: __init__.py  schema.py
contexgo/chronicle/sensors/: __init__.py  focus.py  window_focus.py
contexgo/infra/: config.py  logger.py  logging_utils.py
contexgo/nexus/test_sensor/: __init__.py  api_client.py  app.py  page.py  run_ui.bat  sensor_switch.py
contexgo/protocol/: base_chronicle.py  capture_interface.py  context.py  enums.py
contexgo/protocol/api/: schema.py  sensor_registry.py
data/: CONTEXGO_SENSOR_CONFIG.json
docs/: 20251231数据存储架构综述.md  20260101数据存储架构综述.md  L1设计文档.md  L1设计架构综述.md  总体设计tips.md
frontend/: package-lock.json  package.json
nexus/test_sensor/: __main__.py  api_client.py  app.py  page.py  run_ui.bat
protocol/: capture_interface.py  context.py  enums.py
protocol/api/: schema.py  sensor_registry.py
